fix: refactor code with name opining for opening
